# hanicesun.github.io

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml  requirements.txt  resume.html  resume.md  resume.py  resumeCN.md  resume_cn.md
Archived/: resume_v01.md
CN/: index.html  resume.css  resume.html  resume.md  resume.py
archived/: .resume_v02.md.swp
docs/: CNAME  index.html  resume.md
docs/archived/: index.html  resumeCN.md
src/resume/: cli.py  resume.py
src/resume/static/: resume.css
static/: resume.css
